--- a/index.html
+++ b/index.html
@@ -16,22 +16,23 @@
             <p><span class="strong underline">Nota:</span> Al finalizar el formulario encontrarás el ícono GUARDAR, el cual permitirá que puedas guardar la información ingresada si no culminaste el formulario, dándote la posibilidad de entrar cuando necesites concretar y/o editar antes de elegir el ícono ENVIAR.</p>
             <form class="register-form">
                 <h1>Formulario de Registro</h1>
-                <section class="columns-container">
+                <!-- PRIMERA SECCIÓN -->
+                <section>
                     <h2>Datos del representante de la entidad postulante</h2>
                     <div>
-                        <div class="field">
+                        <div class="field bottom15">
                             <label for="lastname">Apellidos</label>
                             <input id="lastname" type="text">
                         </div>
-                        <div class="field">
+                        <div class="field bottom15">
                             <label for="name">Nombres</label>
                             <input id="name" type="text">
                         </div>
-                        <div class="field">
+                        <div class="field bottom15">
                             <label for="birthdate">Fecha de Nacimiento (dd/mm/yyyy)</label>
                             <input id="birthdate" type="text">
                         </div>
-                        <div class="field">
+                        <div class="field bottom15">
                             <label for="age">Edad</label>
                             <select id="age">
                                 <option value="18">18</option>
@@ -64,7 +65,7 @@
                                 <option value="45">45</option>
                             </select>
                         </div>
-                        <div class="field">
+                        <div class="field bottom15">
                             <label for="region">Región de nacimiento</label>
                             <select id="region">
                                 <option value="Am">Amazonas</option>
@@ -94,8 +95,8 @@
                                 <option value="Uc">Ucayali</option>
                             </select>
                         </div>
-                        <div class="field">
-                            <label for="residence">Región de residencia:</label>
+                        <div class="field bottom15">
+                            <label for="residence">Región de residencia</label>
                             <select id="residence">
                                 <option value="">Amazonas</option>
                                 <option value="">Áncash</option>
@@ -124,34 +125,140 @@
                                 <option value="">Ucayali</option>
                             </select>
                         </div>
-                        <fieldset class="field checkbox">
-                            <legend for="sex">Sexo</legend>
+                        <fieldset class="field checkbox bottom15">
+                            <legend>Sexo</legend>
                             <input type="checkbox" value="masculino">Masculino
                             <br>
                             <input type="checkbox" value="femenino">Femenino
                         </fieldset>
                     </div>
                     <div>
-                        <div class="field">
+                        <div class="field bottom15">
                             <label for="profession">Profesión</label>
                             <input id="profession" type="text">
                         </div>
-                        <div class="field">
+                        <div class="field bottom15">
                             <label for="charge">Cargo en la organización</label>
                             <input id="charge" type="text">
                         </div>
-                        <div class="field">
+                        <div class="field bottom15">
                             <label for="position-time">Tiempo en dicho cargo en cantidad de meses</label>
                             <input id="position-time" type="text">
                         </div>
-                        <div class="field">
+                        <div class="field bottom15">
                             <label for="working-time">Tiempo en la organización en cantidad de meses</label>
                             <input id="working-time" type="text">
                         </div>
                     </div>
                 </section>
+                <!-- SEGUNDA SECCIÓN -->
+                <section>
+                    <h2>Datos de la entidad postulante</h2>
+                    <div class="field">
+                        <label for="entity-name">Nombre de la Entidad</label>
+                        <input id="entity-name" class="field bottom15" type="text">
+                        <label for="operating-time">¿Cuándo comenzaron a operar? (dd/mm/yyyy)</label>
+                        <input id="operating-time" class="field bottom15" type="text">
+                        <label for="organization-type">Tipo de organización</label>
+                        <select id="organization-type" class="option bottom15">
+                            <option value="ong">ONG</option>
+                            <option value="fundaciones">Fundaciones</option>
+                            <option value="asociacion">Asociación Civil</option>
+                            <option value="empresa">Empresa</option>
+                            <option value="persona">Persona Natural</option>
+                            <option value="otros">Otros</option>
+                        </select>
+                        <label for="otros">Otros</label>
+                        <input id="otros" type="text" name="" value="">
+                    </div>
+                    <div class="field field-right">
+                        <h3>Ámbito de intervención:</h3>
+                        <p class="description no-margin">¿Cuáles son las regiones, provincia y distritos donde se sitúan sus operaciones a lo largo de toda la cadena del negocio?</p>
+                        <fieldset class="checkbox">
+                            <legend class="bottom15">Regiones</legend>
+                            <input type="checkbox">Amazonas
+                            <br>
+                            <input type="checkbox">Áncash
+                            <br>
+                            <input type="checkbox">Apurímac
+                            <br>
+                            <input type="checkbox">Arequipa
+                            <br>
+                            <input type="checkbox">Ayacucho
+                            <br>
+                            <input type="checkbox">Cajamarca
+                            <br>
+                            <input type="checkbox">Callao
+                            <br>
+                            <input type="checkbox">Cuzco
+                            <br>
+                            <input type="checkbox">Huancavelica
+                            <br>
+                            <input type="checkbox">Huánuco
+                            <br>
+                            <input type="checkbox">Ica
+                            <br>
+                            <input type="checkbox">Junín
+                            <br>
+                            <input type="checkbox">La Libertad
+                            <br>
+                            <input type="checkbox">Lambayeque
+                            <br>
+                            <input type="checkbox">Lima
+                            <br>
+                            <input type="checkbox">Loreto
+                            <br>
+                            <input type="checkbox">Madre de Dios
+                            <br>
+                            <input type="checkbox">Moquegua
+                            <br>
+                            <input type="checkbox">Pasco
+                            <br>
+                            <input type="checkbox">Piura
+                            <br>
+                            <input type="checkbox">Puno
+                            <br>
+                            <input type="checkbox">San Martín
+                            <br>
+                            <input type="checkbox">Tacna
+                            <br>
+                            <input type="checkbox">Tumbes
+                            <br>
+                            <input type="checkbox">Ucayali
+                            <br>
+                        </fieldset>
+                        <div>
+                            <p class="italic description">Indicar las provincias en las que intervienen tu emprendimiento respecto a las regiones marcadas anteriormente.
+                            </p>
+                            <label for="province">Provincia</label>
+                            <input id="province" type="text" name="" value="">
+                            <p class="italic">Indicar los distritos en las que intervienen tu emprendimiento respecto a las provincias marcadas anteriormente
+                            </p>
+                        </div>
+                        <div class="field">
+                            <label for="">Distrito</label>
+                            <input type="text" name="" value="">
+                        </div>
+                    </div>
+                    <div class="bot-field">
+                        <fieldset class="field checkbox">
+                            <legend>¿Está inscrita en Registros Públicos?*</legend>
+                            <input type="checkbox">Si
+                            <br>
+                            <input type="checkbox">No
+                            <br>
+                        </fieldset>
+                        <div class="field">
+                            <p class="no-margin">Si responde “SÍ”, llena las siguientes opciones:</p>
+                            <label for="ruc">RUC</label>
+                            <input id="ruc" type="text" class="bottom15">
+                            <label for="founded">¿Cuándo se constituyeron? (dd/mm/yyyy)</label>
+                            <input id="founded" type="text" class="bottom15">
+                        </div>
+                    </div>
+                </section>
                 <button type="submit" class="save-btn">Guardar</button>
-                <span class="terms">Encuentra información en el <a href="#" class="page-link"> glosario de términos</a></span>
+                <span class="terms right">Encuentra información en el <a href="#" class="page-link"> glosario de términos</a></span>
             </form>
         </div>
         <footer>
